# weekly-practice

./: .gitignore  README.md  TODO.md  collect.md
.libtv/: project.json
WEEK001 - 在VirtualBox上安装Docker服务/: README.md
WEEK001-在VirtualBox上安装CentOS实验环境/: README.md
WEEK002-在VirtualBox上安装Docker服务/: README.md
WEEK003-Docker快速入门/: README.md
WEEK004-使用Spring项目脚手架/: README.md
WEEK005-学习JHipster/: README.md
WEEK005-学习JHipster/demo/: .yo-rc-global.json  .yo-rc.json  default-sample.jdl  package-lock.json
WEEK006-CNCF项目学习笔记（Dapr）/: README.md
WEEK007-CNCF项目学习笔记（Envoy）/: README.md
WEEK008-CNCF项目学习笔记（Prometheus）/: README.md
WEEK009-Spring官方入门指南/: README.md
daily/: README.md
daily/2025/: todo.md
daily/2025/202508/20250825-graphrag-project-structure/demo/: pyproject.toml
daily/2025/202508/20250825-graphrag-project-structure/demo/mypackage/: __init__.py  __main__.py  cli.py
notes/: todo.md
notes/week002/: README.md
notes/week002-install-docker/: README.md
notes/week003-docker-getting-started/: README.md
notes/week004-creating-spring-project/: README.md
notes/week005/: README.md
notes/week005-jhipster-notes/: README.md
notes/week006-dapr-quickstart/: README.md
notes/week007/: README.md
notes/week008-prometheus-in-action/: README.md
notes/week009/: README.md
notes/week009-spring-guides/: README.md
notes/week010-install-kubernetes/: README.md
notes/week011-spring-boot-on-docker/: README.md
notes/week012-build-your-own-git-server/: README.md
notes/week013-playing-with-kubernetes/: README.md
projects/: README.md
(+1237 files in other folders)
